--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>DDR's Sample Web Page</title>
+		<link rel="stylesheet" type="text/css" href="css/basic black.css">
 	</head>
 	<body>
-		<p>Hello, world.</p>
+		<h1>CUBE TRAINS</h1>
+		<p id="proper">Solve routing puzzles in the inner city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your life, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure.</p>
+		<p id="ul-header">Features:</p>
+		<ul>
+			<li>Puzzles in three dimensions.</li>
+			<li>Twenty reasonably unique levels.</li>
+			<li>Infinite undo/redo.</li>
+			<li>A cheering crowd, just for you.</li>
+			<li>Colourblind mode.</li>
+		</ul>
+		<p>Coming summer 2012. Yours for the price of one Canadian dollar.</p>
 	</body>
 </html>
