Added two pictures to be background to the site.

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 			<li>Colourblind mode.</li>
 		</ul>
 		<p>Coming summer 2012. Yours for the price of one Canadian dollar.</p>
+		<img id="right-bg-image" src="images/Screenshot-Frogatto-30.png">
+		<img id="left-bg-image" src="images/Screenshot-Frogatto-28-composit.png">
 	</body>
 </html>
