Updated site for background.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="css/basic black.css">
 	</head>
 	<body>
+		<div id="left-img">test1</div>
+		<div id="right-img">test2</div>
+		<div id="content">
 		<h1>CUBE TRAINS</h1>
 		<p id="proper">Solve routing puzzles in the inner city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your life, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure.</p>
 		<p id="ul-header">Features:</p>
@@ -17,7 +20,8 @@
 			<li>Colourblind mode.</li>
 		</ul>
 		<p>Coming summer 2012. Yours for the price of one Canadian dollar.</p>
-		<img id="right-bg-image" src="images/Screenshot-Frogatto-30.png">
-		<img id="left-bg-image" src="images/Screenshot-Frogatto-28-composit.png">
+		<!--<img id="right-bg-image" src="images/Screenshot-Frogatto-30.png">
+		<img id="left-bg-image" src="images/Screenshot-Frogatto-28-composit.png">-->
+		</div>
 	</body>
 </html>
