Tweaks to make css more standard.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 		</ul>
 		<p>Coming summer 2012. Yours for the price of one Canadian dollar.</p>
 		</div>
-		<div id="right-img"></div>
+		<div id="right-img" style="overflow: hidden;"></div>
 	</body>
 </html>
