Changed page title to 'cube trains'.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>DDR's Sample Web Page</title>
+		<title>Cube Trains</title>
 		<link rel="stylesheet" type="text/css" href="css/basic black.css">
 	</head>
 	<body>
