Updated site for mac 0.1.0 download.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="left-img"></div>
 		<div id="content">
 		<h1>CUBE TRAINS</h1>
-		<p id="proper">Solve routing puzzles in the inner city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your life, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure.</p>
+		<p id="proper">Solve routing puzzles in the inner city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your life, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure. Download it below.</p>
 		<p id="ul-header">Features:</p>
 		<ul>
 			<li>Puzzles in three dimensions.</li>
@@ -19,6 +19,9 @@
 			<li>Colourblind mode.</li>
 		</ul>
 		<p>Coming summer 2012. Yours for the price of one Canadian dollar.</p>
+		<p>Feedback? <a href="mailto:robertsdavidddr@gmail.com">Email me</a>. <a href="irc://freenode/frogatto">Talk with me</a> on <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a>. Visit <a href="http://www.frogatto.com/forum/index.php">the Frogatto forums</a>. I'd like to hear what you think, and not in a 'please stay on the line, your call is important to us' way, <a href="http://telus.com"><em>Telus</em></a>.</p>
+		<hr>
+		<p>Alpha release available for download. No cheering crowd, no colourblind mode, and no story, yet. Just good puzzles.<br>Mac download: <a href="http://wesnoth.org/jetrel/Binaries/Cube%20Trains%200.1.0.zip">Cube Trains 0.1.0.zip</a></p>
 		</div>
 		<div id="right-img" style="overflow: hidden;"></div>
 	</body>
