Added marcavis' build of CT for linux, i386. :)

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<li>Colourblind mode.</li>
 		</ul>
 		<p>Coming summer 2012. Yours for the price of one Canadian dollar.</p>
-		<p>Feedback? <a href="mailto:robertsdavidddr@gmail.com">Email me</a>. <a href="irc://freenode/frogatto">Talk with me</a> on <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a>. Visit <a href="http://www.frogatto.com/forum/index.php">the Frogatto forums</a>. I'd like to hear what you think, and not in a 'please stay on the line, your call is important to us' way, <a href="http://telus.com"><em>Telus</em></a>.</p>
+		<p>Feedback? <a href="mailto:robertsdavidddr@gmail.com">Email me</a>. <a href="irc://freenode/frogatto">Talk with me</a> on <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a>. Visit <a href="http://www.frogatto.com/forum/index.php">the Frogatto forums</a>. I'd like to hear what you think, and not in a 'please stay on the line, your call is important to us' way.</p>
 		<hr>
-		<p>Alpha release available for download. No cheering crowd, no colourblind mode, and no story, yet. Just good puzzles.<br>Mac download: <a href="files/release/mac/Cube Trains 0.1.1.zip">Cube Trains 0.1.1.zip</a></p>
+		<p>Alpha release available for download. No cheering crowd, no colourblind mode, and no story... yet.<br>Mac Download: <a href="files/release/mac/Cube Trains 0.1.1.zip">Cube Trains 0.1.1.zip</a><br>Linux i386 Download: <a href="files/release/linux/cubetrains_0.1.1-1_i386.deb">Cube Trains 0.1.1.deb</a</p>
 		</div>
 		<div id="right-img" style="overflow: hidden;"></div>
 	</body>
