Fixed bug where we tried to get an image's width before we had downloaded the image.

--- a/frogatto's stats.html
+++ b/frogatto's stats.html
@@ -33,7 +33,7 @@
 				<div id="message" style="font-size:90%"></div>
 			</div>
 		</p>
-		<img id="level image" style="position:absolute; left:0px; top:0px; z-index:-2;">
+		<img id="level image" style="position:absolute; left:0px; top:0px; z-index:-2;" onload="newGraphContinue()">
 		<div id="graph" style="position:absolute; left:0px; top:0px; z-index:-1;"></div>
 	</body>
 </html>
