Updated tracking code.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<title>Cube Trains</title>
 		<link rel="stylesheet" type="text/css" href="css/basic black.css">
 	</head>
-	<body>
+	<body onLoad="mixpanel.track('index load')">
 		<div id="left-img"></div>
 		<div id="content">
 			<h1>CUBE TRAINS</h1>
