Added some pictures and links to the youtube videos.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="content">
 			<h1>CUBE TRAINS</h1>
 			
-			<p id="proper">Solve routing puzzles in a dense city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your career, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure. Download the beta below, for free.</p>
+			<p id="proper">Solve routing puzzles in a dense city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your career, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure. Download the beta below, for free. Also, <a href="media.html">pictures.</a></p>
 			
 			<p id="ul-header">Features:</p>
 			<ul>
