Added save conflict warning.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 			<p id="proper">Feedback? <a href="mailto:robertsdavidddr@gmail.com">Email me</a>. <a href="irc://freenode/frogatto">Talk with me</a> on <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a>. Visit <a href="http://www.frogatto.com/forum/index.php">the Frogatto forums</a>. I'd like to hear what you think, and not in a 'please stay on the line, your call is important to us' way. <i>Telus</i>.</p>
 			<hr>
 			
-			<p id="proper">Beta releases available for download. There is currently no sound or reset button, and inconsistent art quality.
-			<!-- <br><b>Mac Download:</b> <a href="files/release/mac/Cube Trains 0.2.0.zip">Cube Trains 0.1.1.zip</a> <br><b>Linux i386 Download:</b> <a href="files/release/linux/cubetrains_0.1.1-1_i386.deb">Cube Trains 0.1.1.deb</a></br><b>Windows Download:</b> <a href="files/release/win/Cube Trains 0.1.1.zip">Cube Trains 0.1.1.zip</a> --> 
+			<p id="proper">Beta releases available for download. There is currently no sound or reset button, and inconsistent art quality. <i>There is a small bug with regards to the save file, which manifests itself by Cube Trains refusing to finish starting up, or crashing after rendering the first frame. This is caused by a Frogatto and Friends save file in the same place Cube Trains is expecting one of it's saved games. To remedy this problem, find (search for) a file named "save.cfg". It will probably be in a folder called .frogatto or something like that. Remove the file from the folder. Once Cube Trains has started up, rename either file and put the first file back in the folder. This will be fixed in a day or two in version 0.2.1 or greater.</i>
 			
 			<br><b>Macintosh:</b> <a id="mac-download" href="files/release/mac/Cube Trains 0.2.0.zip">Cube Trains 0.2.0.zip</a> <i>This download will be available later today. Please be patient.</i>
 			<br><b>Windows:</b> <a id="windows-download" href = "files/release/win/Cube Trains 0.2.0.zip">Cube Trains 0.2.0.zip</a>
