Minor updates to index.html for readability.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="content">
 			<h1>CUBE TRAINS</h1>
 			
-			<p id="proper">Solve routing puzzles in a dense city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your career, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure. Download the beta below, for free. Also, <a href="media.html">pictures.</a></p>
+			<p id="proper">Solve routing puzzles in a dense city with Cube Trains. You start off as a young urban planner trying to connect a city's fragmented rail lines together, and work your way up to become an old urban planner trying to connect a city's fragmented rail lines together! Over the course of your career, you'll build towering structures, beautiful bridges, and some truly convoluted infrastructure. Download the beta below, for free. Also, <a href="media.html">pictures.</a> Coming summer 2012. Yours for the price of two Canadian dollars.</p>
 			
 			<p id="ul-header">Features:</p>
 			<ul>
@@ -30,19 +30,15 @@
 				<li><font color="lime">☑</font> Colourblind mode.</li>
 			</ul>
 			
-			<p>Coming summer 2012. Yours for the price of two Canadian dollars.</p>
-			
-			<p id="proper">Feedback? <a href="mailto:robertsdavidddr@gmail.com">Email me</a>. <a href="irc://freenode/frogatto">Talk with me</a> on <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a>. Visit <a href="http://www.frogatto.com/forum/index.php">the Frogatto forums</a>. I'd like to hear what you think, and not in a 'please stay on the line, your call is important to us' way. <i>Telus</i>.</p>
-			<hr>
-			
-			<p id="proper">Beta releases available for download. There is currently no sound or reset button, and inconsistent art quality. <i>There is a small bug with regards to the save file, which manifests itself by Cube Trains refusing to finish starting up, or crashing after rendering the first frame. This is caused by a Frogatto and Friends save file in the same place Cube Trains is expecting one of it's saved games. To remedy this problem, find (search for) a file named "save.cfg". It will probably be in a folder called .frogatto or something like that. Remove the file from the folder. Once Cube Trains has started up, rename either file and put the first file back in the folder. This will be fixed in a day or two in version 0.2.1 or greater.</i>
-			
+			<p id="proper">Release notes: Beta releases available for download. There is currently no sound or reset button, and inconsistent art quality. <i>This does not affect mac users, but there is a bug with regards to the save file which manifests itself by Cube Trains refusing to finish starting up or crashing after rendering the first frame. This is caused by a Frogatto and Friends save file in the same place Cube Trains is expecting one of it's saved games. To remedy this problem, find (search for) a file named "save.cfg". It will probably be in a folder called .frogatto or something like that. Remove the file from the folder. Once Cube Trains has started up, rename either file and put the first file back in the folder. This will be fixed in a day or two in version 0.2.1 or greater.</i>
+			</p><p>
 			<br><b>Macintosh:</b> <a id="mac-download" href="files/release/mac/Cube Trains 0.2.0.zip">Cube Trains 0.2.0.zip</a> <i>This download will be available later today. Please be patient.</i>
 			<br><b>Windows:</b> <a id="windows-download" href = "files/release/win/Cube Trains 0.2.0.zip">Cube Trains 0.2.0.zip</a>
-			<br><b>Source Code:</b> <a id="source-download" href="https://github.com/DDR0/Cube_Trains/zipball/0.2.0">Cube Trains 0.2.0.zip</a> <i>This doubles as the linux download. It does not contain an executable file.</i>
+			<br><b>Source Code:</b> <a id="source-download" href="https://github.com/DDR0/Cube_Trains/zipball/0.2.0">Cube Trains 0.2.0.zip</a> <i>This doubles as the linux download. It does not contain an executable file.</i></p>
+			<hr>
 			
+			<p id="proper">Feedback? <a href="mailto:robertsdavidddr@gmail.com">Email me</a>. <a href="irc://freenode/frogatto">Talk with me</a> on <a href="http://en.wikipedia.org/wiki/Internet_Relay_Chat">IRC</a>. Visit <a href="http://www.frogatto.com/forum/index.php">the Frogatto forums</a>. I'd like to hear what you think, and not in a 'please stay on the line, your call is important to us' way.</p>
 			
-			</p>
 		</div>
 		<div id="right-img" style="overflow: hidden;"></div>
 	</body>
