--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			
 			<p id="proper">Release notes: Beta releases available for download. There is currently no sound or reset button, and inconsistent art quality. <i>This does not affect mac users, but there is a bug with regards to the save file which manifests itself by Cube Trains refusing to finish starting up or crashing after rendering the first frame. This is caused by a Frogatto and Friends save file in the same place Cube Trains is expecting one of it's saved games. To remedy this problem, find (search for) a file named "save.cfg". It will probably be in a folder called .frogatto or something like that. Remove the file from the folder. Once Cube Trains has started up, rename either file and put the first file back in the folder. This will be fixed in a day or two in version 0.2.1 or greater.</i>
 			</p><p>
-			<br><b>Macintosh:</b> <a id="mac-download" href="files/release/mac/Cube Trains 0.2.0.zip">Cube Trains 0.2.0.zip</a> <i>This download will be available later today. Please be patient.</i>
+			<br><b>Macintosh:</b> <a id="mac-download" href="files/release/mac/Cube Trains 0.2.0.zip">Cube Trains 0.2.0.zip</a>
 			<br><b>Windows:</b> <a id="windows-download" href = "files/release/win/Cube Trains 0.2.0.zip">Cube Trains 0.2.0.zip</a>
 			<br><b>Source Code:</b> <a id="source-download" href="https://github.com/DDR0/Cube_Trains/zipball/0.2.0">Cube Trains 0.2.0.zip</a> <i>This doubles as the linux download. It does not contain an executable file.</i></p>
 			<hr>
