Updated main page to actually *link* to cube trains .deb.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</p><p>
 			<br><b>Macintosh:</b> <a id="mac-download" href="files/release/mac/Cube Trains 0.2.1.zip">Cube Trains 0.2.1.zip</a>
 			<br><b>Windows:</b> 32-bit version <a id="windows-download" href = "files/release/win/Cube Trains 0.2.1.zip">Cube Trains 0.2.1.zip</a> – 64-bit version <a id="windows-download-64" href = "files/release/win/Cube Trains 0.2.1 64-bit.zip">Cube Trains 0.2.1 64-bit.zip</a>
-			<br><b>Linux:</b> Gentoo ebuild <a id="ebuild-download" href = "files/release/linux/cubetrains-0.2.1.ebuild">cubetrains-0.2.1.ebuild</a><!--32-bit .deb <a id="deb-download" href = "files/release/linux/cubetrains_0.2-1_i386.deb">cubetrains_0.2.1-1_i386.deb</a>--><i> – 32-bit .deb coming soon. Sorry.</i>
+			<br><b>Linux:</b> Gentoo ebuild <a id="ebuild-download" href = "files/release/linux/cubetrains-0.2.1.ebuild">cubetrains-0.2.1.ebuild</a> – 32-bit .deb <a id="deb-download" href = "files/release/linux/cubetrains_0.2-1_i386.deb">cubetrains_0.2.1-1_i386.deb</a>
 			<br><b>Source Code:</b> <a id="source-download" href="https://github.com/DDR0/Cube_Trains/zipball/0.2.1">Cube Trains 0.2.1.zip</a> <i>This doubles as the general linux download. It does not contain an executable file, but you can make your own by following <a href="linux compiling guide.html">the instructions.</a></i></p>
 			<hr>
 			
