Made frogatto's stats process in tinier increments and render the page in-between. This means that you can see the stats update as they're drawn.

--- a/frogatto's stats.html
+++ b/frogatto's stats.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Frogatto Standard Stats Visulizer</title>
-		<link rel="stylesheet" type="text/css" href="css/basic black.css">
+		<!--<link rel="stylesheet" type="text/css" href="css/basic black.css">-->
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<!--<script src="http://www.theargentlark.com/dark-chess/jquery.json.js"></script>-->
 		<script src="frogatto's stats.js"></script>
