--- a/frogatto's stats.html
+++ b/frogatto's stats.html
@@ -3,22 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Frogatto Standard Stats Visulizer</title>
-		<!--<link rel="stylesheet" type="text/css" href="css/basic black.css">-->
+		<link rel="stylesheet" type="text/css" href="css/stats black.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<!--<script src="http://www.theargentlark.com/dark-chess/jquery.json.js"></script>-->
 		<script src="frogatto's stats.js"></script>
 		<script type="text/javascript">$(document).ready(function() {setup()})</script>
 	</head>
-	<body>
+	<body style="background-color: black;">
 		<p>
-			<div style="position:fixed">
-				<table style="background-color:#333;"> <!--Yeah, yeah, I'll replace the table in a bit with the right CSS or something.-->
+			<div style="position:fixed;">
+				<table style="background-color:#222;border-style:solid;border-width:1px;"> <!--Yeah, yeah, I'll replace the table in a bit with the right CSS or something.-->
 					<tr>
 						<td>
-							<button tabindex="2" accesskey="g" type="button" onmouseup="newGraph()" onkeypress="onEnterGraph(event)">Graph</button>
+							<button tabindex="2" accesskey="g" type="button" onmouseup="newGraph()" onkeypress="onEnterGraph(event)">Graph</button><br><a style="opacity:0; font-size:75%"> -</a>
 						</td>
 						<td>
-							<input tabindex=1 type="text" id="filename" value="titlescreen" onkeypress="onEnterGraph(event)" required>.cfg
+							<input tabindex=1 type="text" id="filename" value="titlescreen" onkeypress="onEnterGraph(event)" required>.cfg<br><a style="font-size:75%;" href="frogatto's stats level selector.html">level list </a>
 						<td>
 					</tr>
 					<tr>
@@ -37,3 +37,9 @@
 		<div id="graph" style="position:absolute; left:0px; top:0px; z-index:-1;"></div>
 	</body>
 </html>
+
+<!--
+regex for replacement of 'dir' of levels:
+search: ([1-9a-z-]*).cfg
+replace: <li><a href="\1">\1</a>
+-->
