Fixed race condition in image loading code. Fixed stall in loading code when graph button pressed twice. Added error notes. Renamed 'alert' definition in frogatto's stats.js because it was overriding the default alert function.

--- a/frogatto's stats level selector.html
+++ b/frogatto's stats level selector.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Frogatto Standard Stats Visulizer Files</title>
-		<link rel="stylesheet" type="text/css" href="css/basic black.css">
+		<link rel="stylesheet" type="text/css" href="css/stats black.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 	<body>
