--- a/frogatto's stats.html
+++ b/frogatto's stats.html
@@ -12,13 +12,13 @@
 	<body style="background-color: black;">
 		<p>
 			<div style="position:fixed;">
-				<table style="background-color:#222;border-style:solid;border-width:1px;"> <!--Yeah, yeah, I'll replace the table in a bit with the right CSS or something.-->
+				<table style="background-color:#222; border-style:solid; border-width:1px;"> <!--Yeah, yeah, I'll replace the table in a bit with the right CSS or something.-->
 					<tr>
 						<td>
-							<button tabindex="2" accesskey="g" type="button" onmouseup="newGraph()" onkeypress="onEnterGraph(event)">Graph</button><br><a style="opacity:0; font-size:75%"> -</a>
+							<button tabindex="2" accesskey="g" type="button" onmouseup="newGraph()" onkeypress="onEnterGraph(event)">Graph</button><br><div style="opacity:0; font-size:75%">!</div>
 						</td>
 						<td>
-							<input tabindex=1 type="text" id="filename" value="titlescreen" onkeypress="onEnterGraph(event)" required>.cfg<br><a style="font-size:75%;" href="frogatto's stats level selector.html">level list </a>
+							<input tabindex=1 type="text" id="filename" value="titlescreen" onkeypress="onEnterGraph(event)" required>.cfg<br><div style="font-size:75%;"><a href="frogatto's stats level selector.html">level list</a> • <a href="frogatto's stats error codes.html">error codes</a> • <a href="http://www.frogatto.com" target="_blank">frogatto.com</a></div>
 						<td>
 					</tr>
 					<tr>
