Added a failure of an index2.html document.

--- a/index.html
+++ b/index.html
@@ -47,3 +47,4 @@
 		<div id="right-img" style="overflow: hidden;"></div>
 	</body>
 </html>
+<!--note to self - add hagabaka and krista to credits-->
