--- a/index2.html
+++ b/index2.html
@@ -1,23 +1,23 @@
 <!doctype html>
 <html lang="en">
-	<script type="text/javascript"> //start Mixpanel
-		(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
-		for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
-		mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
-		
-		mixpanel.track_links("a#mac-download",			"mac download",				{'referrer': document.referrer });
-		mixpanel.track_links("a#windows-download",		"windows download",			{'referrer': document.referrer });
-		mixpanel.track_links("a#windows-download-64",	"windows download 64-bit",	{'referrer': document.referrer });
-		mixpanel.track_links("a#deb-download",			"deb download",				{'referrer': document.referrer });
-		mixpanel.track_links("a#ebuild-download",		"ebuild download",			{'referrer': document.referrer });
-		mixpanel.track_links("a#source-download",		"source download",			{'referrer': document.referrer });
-	</script> <!-- end Mixpanel -->
 	<head>
 		<meta charset="utf-8">
 		<title>Cube Trains</title>
 		<link rel="stylesheet" type="text/css" href="css/new black.css">
 	</head>
-	<body onLoad="mixpanel.track('index load')">
+	<body onLoad="mixpanel.track('index2 load')">
+		<script type="text/javascript"> //start Mixpanel
+			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
+			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
+			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
+			
+			mixpanel.track_links("a#mac-download",			"mac download",				{'referrer': document.referrer });
+			mixpanel.track_links("a#windows-download",		"windows download",			{'referrer': document.referrer });
+			mixpanel.track_links("a#windows-download-64",	"windows download 64-bit",	{'referrer': document.referrer });
+			mixpanel.track_links("a#deb-download",			"deb download",				{'referrer': document.referrer });
+			mixpanel.track_links("a#ebuild-download",		"ebuild download",			{'referrer': document.referrer });
+			mixpanel.track_links("a#source-download",		"source download",			{'referrer': document.referrer });
+		</script> <!-- end Mixpanel -->
 		
 		<div id="content">
 			<div class="header"><h2>Download</div>
