--- a/linux compiling guide.html
+++ b/linux compiling guide.html
@@ -15,10 +15,14 @@
 		<div id="content">
 			<h1>COMPILING</h1>
 			<h2>Linux Quick-Guide</h2>
+			<p> Attention, Arch Linux users. To compile, you will need to replace the contents of your makefile <a href=https://raw.github.com/frogatto/frogatto/2b363df8360e641759469ec63eb4602011360d65/Makefile-safe>with this</a>. (Makefiles can be opened with any text editor, btw.)</p>
+			<h3>Steps</h3>
 			<p> ① Paste into a console (aka "Terminal"), "sudo apt-get install ccache libboost-dev libboost-regex-dev libboost-system-dev libglew1.5-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsdl1.2-dev libz-dev libpng12-dev" and hit enter. This will install the dependancies of the game.</p>
 			<p> ② If you are not already in the Cube Trains folder (it'll have a file called "makefile"), navigate there with the "cd" command.</p>
-			<p> ③ Next, run the "make" command there. This will compile the game. If it doesn't say "ERROR", then all is good. (It will print a bunch of stuff like "ccache g++ -DIMPLEMENT_SAVE_PNG -fno-inline-functions -g -O2 -fno-inline-functions `sdl-config --cflags` -D_GNU_SOURCE=1 -D_REENTRANT -Wnon-virtual-dtor -Werror=return-type -fthreadsafe-statics -c src/external_text_editor.cpp", though.) If you still get an error, contact me (details on main page) and we'll try to figure out what's wrong.</p>
+			<p> ③ Next, run the "make" command there. This will compile the game. If it doesn't say "ERROR", then all is good. (It will print a bunch of stuff like "ccache g++ -DIMPLEMENT_SAVE_PNG -fno-inline-functions -g -O2 -fno-inline-functions bla bla bla". Don't worry, that means it's working.) If you still get an error, contact me (details on main page) and we'll try to figure out what's wrong.</p>
 			<p> ④ Run the game with "./game". If everything is working right, you should see the game start up. Have fun!</p>
+			<!--<h3>Errors</h3>
+			<p> ① Try running, in console, "make -f Makefile-safe" instead of "make", in step ③. This will try compiling Frogatto using only one core.</p>-->
 		</div>
 		<div id="right-img" style="overflow: hidden;"></div>
 	</body>
